--- a/.github/workflows/testOnPushAndPR.yml
+++ b/.github/workflows/testOnPushAndPR.yml
@@ -18,4 +18,4 @@ jobs:
       run: Install-Module Pester -Force
     - name: Invoke Pester
       shell: pwsh
-      run: Invoke-Pester test -EnableExit
+      run: Invoke-Pester -EnableExit
