--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,6 +15,7 @@ jobs:
     - uses: devblackops/github-action-psscriptanalyzer@master
 
   test_individual_functions:
+    needs: lint
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -30,6 +31,7 @@ jobs:
       run: Invoke-Pester -EnableExit
 
 #  build:
+#    needs: test_individual_functions
 #    runs-on: windows-latest
 #    steps:
 #    - uses: actions/checkout@v1
@@ -38,8 +40,12 @@ jobs:
 #      run: .\build\build.ps1
 
 #  test_module:
+#    needs: build
 #    runs-on: ${{ matrix.os }}
 #    strategy:
 #      fail-fast: false
 #      matrix:
 #        os: [ubuntu-latest, windows-latest, macOS-latest]
+
+#  publish:
+#    needs: [test_module, build]
