--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,34 +1,34 @@
-name: Publish to PS Gallery
+#name: Publish to PS Gallery
 
-on:
-  push:
-    branches:
-      - master
-    tags:        
-      - v1.*
+#on:
+#  push:
+#    branches:
+#      - master
+#    tags:        
+#      - v1.6
 
-jobs:
-  lint:
-    name: Run psscriptanalyzer
-    runs-on: ubuntu-latest
-    steps:
-    - uses: devblackops/github-action-psscriptanalyzer@master
+#jobs:
+#  lint:
+#    name: Run psscriptanalyzer
+#    runs-on: ubuntu-latest
+#    steps:
+#    - uses: devblackops/github-action-psscriptanalyzer@master
 
-  test_individual_functions:
-    needs: lint
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-    steps:
-    - uses: actions/checkout@v1
-    - name: Install Pester
-      shell: pwsh
-      run: Install-Module Pester -Force
-    - name: Invoke Pester
-      shell: pwsh
-      run: Invoke-Pester -EnableExit
+#  test_individual_functions:
+#    needs: lint
+#    runs-on: ${{ matrix.os }}
+#    strategy:
+#      fail-fast: false
+#      matrix:
+#        os: [ubuntu-latest, windows-latest]
+#    steps:
+#    - uses: actions/checkout@v1
+#    - name: Install Pester
+#      shell: pwsh
+#      run: Install-Module Pester -Force
+#    - name: Invoke Pester
+#      shell: pwsh
+#      run: Invoke-Pester -EnableExit
 
 #  build:
 #    needs: test_individual_functions
