--- a/.github/workflows/testOnPushAndPR.yml
+++ b/.github/workflows/testOnPushAndPR.yml
@@ -1,6 +1,12 @@
 name: Push and PR check
 
-on: [push, pull_request]
+on:
+  push:
+    paths:
+    - 'functions/*.ps1'
+  pull_request:
+    paths:
+    - 'functions/*.ps1'
 
 jobs:
   lint:
@@ -10,7 +16,12 @@ jobs:
     - uses: devblackops/github-action-psscriptanalyzer@master
 
   test:
-    runs-on: ubuntu-latest
+    needs: lint
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest]
     steps:
     - uses: actions/checkout@v1
     - name: Install Pester
