--- a/.github/workflows/testOnPushAndPR.yml
+++ b/.github/workflows/testOnPushAndPR.yml
@@ -38,9 +38,10 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     steps:
-      - continue-on-error: false
-      - name: Build module
-        shell: pwsh
-        run: |
-          /home/runner/work/EasitGoWebservice/EasitGoWebservice/build/tempbuild.ps1
-          Write-Host "Get-Location"
+    - uses: actions/checkout@v1
+    - continue-on-error: false
+    - name: Build module
+      shell: pwsh
+      run: |
+        /home/runner/work/EasitGoWebservice/EasitGoWebservice/build/tempbuild.ps1
+        Write-Host "Get-Location"
