--- a/.github/workflows/testOnPushAndPR.yml
+++ b/.github/workflows/testOnPushAndPR.yml
@@ -39,9 +39,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - continue-on-error: false
     - name: Build module
       shell: pwsh
-      run: |
-        /home/runner/work/EasitGoWebservice/EasitGoWebservice/build/tempbuild.ps1
-        Write-Host "Get-Location"
+      run: /home/runner/work/EasitGoWebservice/EasitGoWebservice/build/tempbuild.ps1
+    - name: Get location
+      shell: pwsh
+      run: Write-Host "Get-Location"
