--- a/.github/workflows/createIssueInOden.yml
+++ b/.github/workflows/createIssueInOden.yml
@@ -11,7 +11,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  export:
+  SendIssueToOden:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -22,5 +22,5 @@ jobs:
       run: |
         Install-Module -Name EasitGoWebservice -Force
         Import-Module EasitGoWebservice -Force
-        Import-GORequestItem -url ${{ secrets.odenWS }} -apikey ${{ secrets.odenAPI }} -ihi ${{ secrets.odenIH }} -Description "GitHub: ${{ github.ref }} ´nEnv: ${{ env }}" -Subject "A new issue have been created on GitHub"
+        Import-GORequestItem -url "${{ secrets.odenWS }}" -apikey "${{ secrets.odenAPI }}" -ihi ${{ secrets.odenIH }} -Description "GitHub ${{ github.ref }} Env ${{ env }}" -Subject "A new issue have been created on GitHub"
       shell: pwsh
