--- a/.github/workflows/createIssueInOden.yml
+++ b/.github/workflows/createIssueInOden.yml
@@ -17,10 +17,14 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Runs a set of commands using the runners shell
-    - name: Create an issue in Oden.
-      run: |
-        Install-Module -Name EasitGoWebservice -Force
-        Import-Module EasitGoWebservice -Force
-        Import-GORequestItem -url "${{ secrets.odenWS }}" -apikey "${{ secrets.odenAPI }}" -ihi ${{ secrets.odenIH }} -Description "GitHub ${{ github.ref }} Env ${{ env }}" -Subject "A new issue have been created on GitHub"
+    - name: Install module.
+      run: Install-Module -Name EasitGoWebservice -Force
+      run: Import-Module EasitGoWebservice -Force
+      run: Import-GORequestItem -url "${{ secrets.odenWS }}" -apikey "${{ secrets.odenAPI }}" -ihi ${{ secrets.odenIH }} -Description "GitHub ${{ github.ref }} Env ${{ env }}" -Subject "A new issue have been created on GitHub"
+      shell: pwsh
+    - name: Import module.
+      run: Import-Module EasitGoWebservice -Force
+      shell: pwsh
+    - name: Send request.
+      run: Import-GORequestItem -url "${{ secrets.odenWS }}" -apikey "${{ secrets.odenAPI }}" -ihi ${{ secrets.odenIH }} -Description "GitHub ${{ github.ref }} Env ${{ env }}" -Subject "A new issue have been created on GitHub"
       shell: pwsh
