--- a/.github/workflows/createIssueInOden.yml
+++ b/.github/workflows/createIssueInOden.yml
@@ -24,5 +24,5 @@ jobs:
       run: Import-Module EasitGoWebservice -Force
       shell: pwsh
     - name: Send request.
-      run: Import-GORequestItem -url "${{ secrets.odenWS }}" -apikey "${{ secrets.odenAPI }}" -ihi ${{ secrets.odenIH }} -Description "GitHub ${{ github.event }}" -Subject "A new issue have been created on GitHub" -ShowDetails
+      run: Import-GORequestItem -url "${{ secrets.odenWS }}" -apikey "${{ secrets.odenAPI }}" -ihi ${{ secrets.odenIH }} -Description "GitHub ${{ github.event_path }}" -Subject "A new issue have been created on GitHub" -ShowDetails
       shell: pwsh
