--- a/.github/workflows/createIssueInOden.yml
+++ b/.github/workflows/createIssueInOden.yml
@@ -6,7 +6,7 @@ name: Create Issue in Oden
 # events but only for the master branch
 on:
   issues:
-    types: [ opened ]
+    types: [ opened, edited ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
