--- a/.github/workflows/createIssueInOden.yml
+++ b/.github/workflows/createIssueInOden.yml
@@ -6,7 +6,7 @@ name: Create Issue in Oden
 # events but only for the master branch
 on:
   issues:
-    types: [ opened, edited ]
+    types: [ opened ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -24,5 +24,5 @@ jobs:
       run: Import-Module EasitGoWebservice -Force
       shell: pwsh
     - name: Send request.
-      run: Import-GORequestItem -url "${{ secrets.odenWS }}" -apikey "${{ secrets.odenAPI }}" -ihi ${{ secrets.odenIH }} -Description "${{ github.event.issue.body }}" -Subject "GitHub Issue ${{ github.event.issue.number }} - ${{ github.event.issue.title }}" -ShowDetails
+      run: Import-GORequestItem -url "${{ secrets.odenWS }}" -apikey "${{ secrets.odenAPI }}" -ihi ${{ secrets.odenIH }} -Description "${{ github.event.issue.body }}" -Subject "GitHub Issue ${{ github.event.issue.number }} - ${{ github.event.issue.title }} - ${{ github.event.issue.labels.name }}" -ShowDetails
       shell: pwsh
