--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,21 +1,21 @@
-name: Publish to PS Gallery
+#name: Publish to PS Gallery
 
-on:
+#on:
 #  push:
 #    branches:
 #      - master
 #    tags:        
 #      - v7.6.*
-  pull_request:
-    paths:
-    - 'functions/*.ps1'
+#  pull_request:
+#    paths:
+#    - 'functions/*.ps1'
 
-jobs:
-  lint:
-    name: Run psscriptanalyzer
-    runs-on: ubuntu-latest
-    steps:
-    - uses: devblackops/github-action-psscriptanalyzer@master
+#jobs:
+#  lint:
+#    name: Run psscriptanalyzer
+#    runs-on: ubuntu-latest
+#    steps:
+#    - uses: devblackops/github-action-psscriptanalyzer@master
 
 #  test_individual_functions:
 #    needs: lint
