--- a/.github/release-drafter-template.yml
+++ b/.github/release-drafter-template.yml
@@ -1,4 +1,4 @@
-name-template: 'Release $RESOLVED_VERSION'
+name-template: 'Release 2.0.0' #$RESOLVED_VERSION'
 tag-template: '$RESOLVED_VERSION'
 include-labels:
   - 'feature'
