--- a/.github/workflows/canaryBuild.yml
+++ b/.github/workflows/canaryBuild.yml
@@ -7,7 +7,7 @@ name: Canary build
 on:
   push:
     paths:
-      - 'source/**'
+      - 'source3/**'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
