Updated Import-GOAssetItem to comply with PSSA.

--- a/.github/workflows/pfOfSourceTests.yml
+++ b/.github/workflows/pfOfSourceTests.yml
@@ -18,6 +18,7 @@ jobs:
         failOnErrors: true
         failOnWarnings: false
         failOnInfos: false
+        settingsPath: ./.github/PSScriptAnalyzerSettings.psd1
 
   test:
     name: Pester tests
