--- a/.github/workflows/updateHelp.yml
+++ b/.github/workflows/updateHelp.yml
@@ -6,7 +6,7 @@ name: Generate and update help
 # events but only for the development branch
 on:
   push:
-    branches: 'release/**'
+    branches: 'development/**'
     paths:
     - 'source/**'
 
