--- a/.github/workflows/prOfTestTest.yml
+++ b/.github/workflows/prOfTestTest.yml
@@ -17,7 +17,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install Pester
       shell: pwsh
-      run: Install-Module Pester -Force
+      run: Update-Module Pester -Force
     - name: Invoke Pester
       shell: pwsh
-      run: Invoke-Pester -EnableExit
+      run: Invoke-Pester
