--- a/.github/workflows/pfOfSourceTests.yml
+++ b/.github/workflows/pfOfSourceTests.yml
@@ -32,7 +32,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install Pester
       shell: pwsh
-      run: Install-Module Pester -Force
+      run: Update-Module Pester -Force
     - name: Invoke Pester
       shell: pwsh
-      run: Invoke-Pester -EnableExit
+      run: Invoke-Pester
