--- a/.github/workflows/pfOfSourceTests.yml
+++ b/.github/workflows/pfOfSourceTests.yml
@@ -15,6 +15,7 @@ jobs:
       uses: devblackops/github-action-psscriptanalyzer@master
       with:
         repoToken: ${{ secrets.GITHUB_TOKEN }}
+        rootPath: source
         failOnErrors: true
         failOnWarnings: false
         failOnInfos: false
