--- a/.github/workflows/updateHelp.yml
+++ b/.github/workflows/updateHelp.yml
@@ -2,7 +2,7 @@ name: Generate and update help
 
 on:
   push:
-    branches: 'release/v2*'
+    branches: 'release/v2**'
     paths:
     - 'source/**'
 
