--- a/.github/release-drafter-template.yml
+++ b/.github/release-drafter-template.yml
@@ -1,4 +1,4 @@
-name-template: '$NEXT_PATCH_VERSION' #$RESOLVED_VERSION'
+name-template: '$RESOLVED_VERSION'
 tag-template: '$RESOLVED_VERSION'
 include-labels:
   - 'feature'
