--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,6 @@
 version: 1.69.{build}
 pull_requests:
   do_not_increment_build_number: true
-branches:
-  only:
-  - /release*/
 skip_non_tags: true
 skip_branch_with_pr: true
 build_script:
@@ -12,7 +9,7 @@ test_script:
 - ps: >-
     Install-Module Pester -Force -Scope CurrentUser
 
-    Invoke-Pester -EnableExit
+    Invoke-Pester
 deploy: off
 on_success:
 - ps: $newManifestTest = Test-ModuleManifest -Path "$env:resourceRoot\$env:moduleName\$env:moduleName.psd1"
