--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-version: 1.67.{build}
+version: 1.69.{build}
 pull_requests:
   do_not_increment_build_number: true
 branches:
@@ -7,17 +7,77 @@ branches:
 skip_non_tags: true
 skip_branch_with_pr: true
 build_script:
-- ps: "New-Module -Name \"$env:moduleName\" -ScriptBlock {\n    $modulePath = \"$env:resourceRoot\\$env:moduleName\\$env:moduleName.psm1\"\n    $scripts = Get-ChildItem -Path \"$env:resourceRoot\" -Filter \"*.ps1\"\n    if (!(Test-Path -Path $modulePath)) {\n        if (!(Test-Path -Path \"$env:resourceRoot\\$env:moduleName\")) {\n            New-Item -Path \"$env:resourceRoot\" -Name \"$env:moduleName\" -ItemType \"directory\" | Out-Null\n            Write-Host \"Created $env:resourceRoot\\$env:moduleName\"\n        }\n        $newModuleFile = New-Item -Path \"$env:resourceRoot\\$env:moduleName\" -Name \"$env:moduleName.psm1\" -ItemType \"file\"\n        Write-Host \"Created $newModuleFile\"\n    }\n    foreach ($script in $scripts) {\n        $exportFunction = \"Export-ModuleMember -Function $($script.BaseName)\"\n        $scriptName = \"$($script.Name)\"\n        $scriptContent = Get-Content -Path \"$env:resourceRoot\\$scriptName\" -Raw\n        if (Test-Path -Path $modulePath) {\n            Add-Content -Path $modulePath -Value $scriptContent\n            if (!($exportFunction -eq 'New-XMLforEasit')) {\n                Add-Content -Path $modulePath -Value $exportFunction\n            }\n        }\n    }\n}\n\n$manifest = @{\n    Path              = \"$env:resourceRoot\\$env:moduleName\\$env:moduleName.psd1\" \n    RootModule        = \"$env:moduleName.psm1\" \n    CompanyName       = \"$env:companyName\"\n    Author            = \"$env:moduleAuthor\" \n    ModuleVersion     = \"$env:APPVEYOR_BUILD_VERSION\"\n    HelpInfoUri       = \"$env:helpInfoUri\"\n    Description       = 'Module to be used with Easit BPS & Easit GO webservice API'\n    PowerShellVersion = '5.1'\n    Copyright         = \"(c) 2021 $env:companyName. All rights reserved.\"\n}\nNew-ModuleManifest @manifest | Out-Null"
+- ps: >-
+    New-Module -Name "$env:moduleName" -ScriptBlock {
+        $modulePath = Join-Path -Path "$env:moduleRoot" -ChildPath "$env:moduleName.psm1"
+        $privScripts = Get-ChildItem -Path "$env:sourceRoot\private" -Filter "*.ps1" -Recurse
+        $pubScripts = Get-ChildItem -Path "$env:sourceRoot\public" -Filter "*.ps1" -Recurse
+        if (!(Test-Path -Path $modulePath)) {
+            $newModuleDir = New-Item -Path "$env:resourceRoot" -Name "$env:moduleName" -ItemType 'directory' -Force
+            $newModuleFile = New-Item -Path "$env:moduleRoot" -Name "$env:moduleName.psm1" -ItemType "file"
+        }
+        foreach ($privateScript in $privScripts) {
+            $scriptContent = Get-Content -Path "$($privateScript.FullName)" -Raw
+            if (Test-Path -Path $modulePath) {
+                Add-Content -Path $modulePath -Value $scriptContent
+            } else {
+                Write-Output "Unable to find modulePath at $modulePath"
+            }
+        }
+        foreach ($publicScript in $pubScripts) {
+            $scriptContent = Get-Content -Path "$($publicScript.FullName)" -Raw
+            if (Test-Path -Path $modulePath) {
+                Add-Content -Path $modulePath -Value $scriptContent
+                Add-Content -Path $modulePath -Value "Export-ModuleMember -Function $($publicScript.BaseName)"
+            } else {
+                Write-Output "Unable to find modulePath at $modulePath"
+            }
+        }
+    } | Out-Null
+
+    $moduleFilePath = Join-Path -Path "$env:moduleRoot" -ChildPath "${env:moduleName}.psm1"
+
+    if (Test-Path -Path "$moduleFilePath") {
+        Write-Output "Check for moduleFilePath, OK!"
+    }
+
+    else {
+        throw "Unable to find $moduleFilePath"
+    }
+
+    $manifestFilePath = Join-Path -Path "$env:moduleRoot" -ChildPath "${env:moduleName}.psd1"
+
+    $manifest = @{
+        Path              = "$manifestFilePath"
+        RootModule        = "$env:moduleName.psm1"
+        CompanyName       = "$env:companyName"
+        Author            = "$env:moduleAuthor"
+        ModuleVersion     = "$env:APPVEYOR_BUILD_VERSION"
+        HelpInfoUri       = "$env:helpInfoUri"
+        LicenseUri        = "$env:licenseUri"
+        ProjectUri        = "$env:projectUri"
+        Description       = 'Module to be used with Easit BPS & Easit GO webservice API'
+        PowerShellVersion = '5.1'
+        Copyright         = "(c) 2020 $env:companyName. All rights reserved."
+    }
+
+    New-ModuleManifest @manifest | Out-Null
+
+    if (Test-Path -Path "$manifestFilePath") {
+        Write-Output "Check for manifestFilePath, OK!"
+    } else {
+        throw "Unable to find $manifestFilePath"
+    }
 test_script:
 - ps: >-
-    Install-Module Pester -Force -Scope CurrentUser
+    Install-Module Pester -Force
 
     Invoke-Pester
 deploy: off
-on_success:
-- ps: $newManifestTest = Test-ModuleManifest -Path "$env:resourceRoot\$env:moduleName\$env:moduleName.psd1"
 on_finish:
 - ps: >-
-    if ($newManifestTest) {
-        #Publish-Module -Path "$env:resourceRoot\$env:moduleName\" -NuGetApiKey "$env:galleryPublishingKey"
+    if (Test-ModuleManifest -Path "$manifestFilePath") {
+        $moduleRootPath = Resolve-Path "$env:moduleRoot"
+        Publish-Module -Path "$moduleRootPath" -NuGetApiKey "$env:galleryPublishingKey"
+        Write-Output "Module published!"
     }
