--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -2,7 +2,9 @@ name: Release Notes
 
 on:
   push:
-    branches: 'release/**'
+    branches:
+    - 'release/**'
+    - 'hotfix/**'
     paths-ignore:
     - '.github/**'
     - 'workflows/**'
