--- a/.github/release-drafter-template.yml
+++ b/.github/release-drafter-template.yml
@@ -1,5 +1,5 @@
-name-template: '$RESOLVED_VERSION'
-tag-template: '$RESOLVED_VERSION'
+name-template: '$NEXT_PATCH_VERSION'
+tag-template: '$NEXT_PATCH_VERSION'
 include-labels:
   - 'feature'
   - 'enhancement'
