--- a/appveyor.yml
+++ b/appveyor.yml
@@ -88,6 +88,6 @@ on_finish:
 - ps: >-
     if (Test-ModuleManifest -Path "$manifestFilePath") {
         $moduleRootPath = Resolve-Path "$env:moduleRoot"
-        Publish-Module -Path "$moduleRootPath" -NuGetApiKey "$env:galleryPublishingKey"
+        Publish-Module -Path "$moduleRootPath" -NuGetApiKey "$env:galleryPublishingKey" -Tags 'easit','easitgo','easitapi'
         Write-Output "Module published!"
     }
