--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ pull_requests:
   do_not_increment_build_number: true
 branches:
   only:
-  - main
+  - /release/.*/
 skip_non_tags: true
 skip_branch_with_pr: true
 environment:
