--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -6,6 +6,7 @@ on:
     - 'release/**'
     - 'hotfix/**'
     - 'development'
+    - 'pwsh7'
     paths-ignore:
     - '.github/**'
     - 'workflows/**'
