--- a/.github/workflows/prOfTestTest.yml
+++ b/.github/workflows/prOfTestTest.yml
@@ -3,7 +3,7 @@ name: Test tests with Pester
 on:
   pull_request:
     paths:
-    - 'tests/**'
+    - 'tests/function/**'
 
 jobs:
   test:
@@ -17,4 +17,4 @@ jobs:
     - uses: actions/checkout@v2
     - name: Invoke Pester
       shell: pwsh
-      run: Invoke-Pester
+      run: Invoke-Pester -Path .\tests\function\
