--- a/.github/workflows/release-drafter-v3.yml
+++ b/.github/workflows/release-drafter-v3.yml
@@ -1,29 +1,23 @@
-# This is a basic workflow to help you get started with Actions
+name: Release Notes
 
-name: Release notes v3
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "development" branch
   push:
-    branches: [ "release3" ]
-  pull_request:
-    branches: [ "release3" ]
+    branches:
+    - 'release2'
+    paths-ignore:
+    - '.github/**'
+    - 'workflows/**'
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   update_release_draft:
     name: update_release_draft
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: generate_release_draft
 
         uses: release-drafter/release-drafter@v5
         with:
 
-          config-name: release-drafter-template.yml
+          config-name: release-drafter-template-v3.yml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
