init of new version pipeline

--- a/.github/workflows/updateExternalHelp-v3.yml
+++ b/.github/workflows/updateExternalHelp-v3.yml
@@ -4,24 +4,23 @@ on:
   push:
     paths:
     - 'docs/v3/**'
-    - 'source'
     branches:
-    - 'release3'
+    - 'release/v3**'
 
 jobs:
   buildHelp:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           token: ${{ secrets.GITAUTOCOMMITPAT }}
 
       - name: Build temp module
-        run: ./build/tempbuild_github.ps1
+        run: ./build/tempbuild_github-v3.ps1
         shell: pwsh
 
       - name: Generate and update docs
-        run: ./build/generateAndUpdateExternalHelpv3.ps1
+        run: ./build/generateAndUpdateExternalHelp-v3.ps1
         shell: pwsh
 
       - uses: stefanzweifel/git-auto-commit-action@v4
