--- a/.github/workflows/prOfSourceTests-v3.yml
+++ b/.github/workflows/prOfSourceTests-v3.yml
@@ -3,14 +3,14 @@ name: Test source with PSSA and Pester
 on:
   pull_request:
     paths:
-    - 'source/**'
+    - 'source/v3/**'
 
 jobs:
   lint:
     name: Run PSSA
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: lint
       uses: devblackops/github-action-psscriptanalyzer@master
       with:
@@ -32,4 +32,4 @@ jobs:
     - uses: actions/checkout@v2
     - name: Invoke Pester
       shell: pwsh
-      run: Invoke-Pester
+      run: Invoke-Pester -Path .\tests\v3
