update Github Actions for release 3 pipeline

--- a/.github/workflows/prOfSourceTests-v3.yml
+++ b/.github/workflows/prOfSourceTests-v3.yml
@@ -2,8 +2,10 @@ name: Test source with PSSA and Pester
 
 on:
   pull_request:
+    branches: [ "release3" ]
     paths:
     - 'source/v3/**'
+  workflow_dispatch:
 
 jobs:
   lint:
